feat: 문제 5 화폐 갯수 구하는 기능 구현